--- a/ci/Selenium/pom.xml
+++ b/ci/Selenium/pom.xml
@@ -5,6 +5,10 @@
 	<groupId>MySel20Proj</groupId>
 	<artifactId>MySel20Proj</artifactId>
 	<version>1.0</version>
+	<properties>
+      <maven.compiler.source>8</maven.compiler.source>
+      <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
