--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ ci/Selenium/.project
 ci/Jmeter/old_tests/
 ci/old_scripts/run_all_uc.txt
 ci/old_scripts/run_all_uc.sh
-ci/Locust/__pycache__/quickstart.cpython-35.pyc
+ci/Locust/__pycache__/
+ci/Locust/*.pyc
