Updated to point to PeizerBranch

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ node {
     git([
       url: "https://github.com/venicegeo/bftest-integration",
       poll: true,
-      branch: "master"
+      branch: "PeizerBranch"
     ])
   }
 
