--- a/ci/Selenium/pom.xml
+++ b/ci/Selenium/pom.xml
@@ -81,6 +81,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration> 
+                		<useFile>false</useFile> 
+        			</configuration> 
 					<version>2.16</version>
 				</plugin>
 			</plugins>
