--- a/ci/Selenium/pom.xml
+++ b/ci/Selenium/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>MySel20Proj</groupId>
-	<artifactId>MySel20Proj</artifactId>
+	<groupId>org.venice.beachfront</groupId>
+	<artifactId>bf-selenium</artifactId>
 	<version>1.0</version>
 	<properties>
-      <maven.compiler.source>8</maven.compiler.source>
-      <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.8.1</version>
+			<version>3.14.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mashape.unirest</groupId>
@@ -81,9 +81,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration> 
-                		<useFile>false</useFile> 
-        			</configuration> 
+					<configuration>
+						<useFile>false</useFile>
+					</configuration>
 					<version>2.16</version>
 				</plugin>
 			</plugins>
